...
            app:layout_constraintStart_toStartOf="parent" />

        <TableLayout
            android:id="@+id/tlEquation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnLeft"
            app:layout_constraintEnd_toEndOf="@id/tlActions">
            <TableRow
                android:id="@+id/trEquationB"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
...
            android:clickable="true"
            android:text="\u00ab--"
            app:layout_constraintBottom_toTopOf="@id/tlKeyboard"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRight"
            style="@style/buttonRight"
            android:clickable="true"
            android:text="--\u00bb"
            app:layout_constraintBottom_toTopOf="@id/tlKeyboard"
            app:layout_constraintStart_toEndOf="@id/btnLeft" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tlKeyboard"
            app:layout_constraintStart_toEndOf="@id/btnRight" >

            <TableRow
                android:id="@+id/trMEM"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/btnMEM"
                    layout="@layout/button_text"
                    app:RightText="@{`RCL`}"
                    app:buttonText="@{`MEM`}"
                    app:leftText="@{`STO`}" />
            </TableRow>

            <TableRow
                android:id="@+id/trEEX"
                android:layout_width="match_parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TableRow
                android:id="@+id/trActionsE"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/btnAlpha"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`\u03b1`}"
                    app:leftText="@{``}" />

                <include
...
                    app:RightText="@{``}"
                    app:buttonText="@{`/`}"
                    app:leftText="@{``}" />
            </TableRow>

            <TableRow
                android:id="@+id/trActionsA"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/btnEval"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`Eval`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnEnter"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`enter`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnDelete"
                    layout="@layout/button_text"
                    app:RightText="@{`clr`}"
                    app:buttonText="@{`del`}"
                    app:leftText="@{`drop`}" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tlKeyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:id="@+id/trKeysD"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/btnKey7"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`7`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnKey8"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`8`}"
                    app:leftText="@{``}" />

                <include
...
                    app:RightText="@{``}"
                    app:buttonText="@{`9`}"
                    app:leftText="@{``}" />
            </TableRow>

            <TableRow
                android:id="@+id/trKeysC"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/btnKey4"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`4`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnKey5"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`5`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnKey6"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`6`}"
                    app:leftText="@{``}" />
            </TableRow>

            <TableRow
                android:id="@+id/trKeysB"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/btnKey1"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`1`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnKey2"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`2`}"
                    app:leftText="@{``}" />

                <include
                    android:id="@+id/btnKey3"
                    layout="@layout/button_text"
                    app:RightText="@{``}"
                    app:buttonText="@{`3`}"
                    app:leftText="@{``}" />
            </TableRow>

...
