<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="memoryText"
            type="String" />
    </data>
    <FrameLayout
        android:background="@color/darkbrown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true">
        <Button
            android:id="@+id/btnButton"
            style="@style/buttonSmall"
            android:clickable="true"
            android:text="@{memoryText, default=`-`}" >
        </Button>
    </FrameLayout>
</layout>